--- a/src/components/css/card.css
+++ b/src/components/css/card.css
@@ -29,4 +29,4 @@
   -webkit-transform: translateY(-20px);
           transform: translateY(-20px);
 }
-/*# sourceMappingURL=RoletteCard.css.map */
+/*# sourceMappingURL=Card.css.map */
