--- a/src/components/css/WatingRoom.scss
+++ b/src/components/css/WatingRoom.scss
@@ -1,3 +1,68 @@
+#menuModal {
+  #backBtn {
+    text-align: center;
+    font-size: 30px;
+    border: 1px black solid;
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    left : 94%;
+    top : 10px;
+    background-color: #726d6d7c;
+  }
+  .menuWraper {
+    bottom: 100px;
+    div {
+      border: 3px black solid;
+      position:absolute;
+      text-align: center;
+      font-size: 50px;
+    }
+
+    :nth-child(1){
+      width: 405px;
+      height: 650px;
+      img{
+        position: absolute;
+        width: 230px;
+        height: auto;
+        top: 30%;
+        left : 25%;
+      }
+    }
+
+    :nth-child(2){
+      left : 48%;
+      width: 405px;
+      height: 200px;
+    }
+    :nth-child(3){
+      left : 48%;
+      top : 35%;
+      width: 195px;
+      height: 250px;
+    }
+    :nth-child(4) {
+      left: 71%;
+      top: 35%;
+      width: 195px;
+      height: 250px;
+    }
+    :nth-child(5) {
+      left: 48%;
+      top: 74%;
+      width: 195px;
+      height: 160px;
+    }
+
+    :nth-child(6) {
+      left: 71%;
+      top: 74%;
+      width: 195px;
+      height: 160px;
+    }
+  }
+}
 
 .navi {
   border-bottom: 3px dotted;
@@ -74,8 +139,6 @@
       width: 250px;
       left: 170px;
     }
-
-    
 
     .infoBtn {
       position: absolute;
