--- a/src/views/find.css
+++ b/src/views/find.css
@@ -1,5 +1,9 @@
 .main{
+
     display: flex;
+    width: 960px;
+    height: 740px;
+    overflow-y: hidden;
 }
 .make_wrapper{
     margin-top: 83px;
