--- a/src/components/AlcoholField.css
+++ b/src/components/AlcoholField.css
@@ -1,9 +1,14 @@
+
 .mainField {
     display: table;
     text-align: center;
     justify-content: center;
     position: relative;
     margin: auto;
+    flex-direction: column;
+
+    width: 822.22px;
+    height: 740px;
 }
 
 .edge {
@@ -45,7 +50,13 @@
     display: inline-block;
     padding:  5px;
  }
-
+.player-marble {
+    background-color: #ff0000;
+    display: inline-block;
+    width: 70px;
+    height: 70px;
+    margin: 3px;
+}
 /*body {*/
 /*    display: inline-block;*/
 /*    background-color: #030303;*/
