--- a/src/components/css/WatingRoom.scss
+++ b/src/components/css/WatingRoom.scss
@@ -128,7 +128,7 @@
   #backBtn {
     text-align: center;
     font-size: 30px;
-    border: 1px red solid;
+    // border: 1px red solid;
     position: absolute;
     width: 40px;
     height: 40px;
@@ -145,16 +145,18 @@
 
     .menuTitle {
       font-size: 50px;
-      border: 1px red solid;
+      // border: 1px red solid;
       color: #FCCE39;
+      margin-bottom: 20px;
     }
 
     .menuRankContainer {
       display: flex;
       justify-content: center;
+      
 
       .menuRankLeft {
-        border: 1px red solid;
+        border-right: 3px black solid;
         width: 360.1px;
         height: 436.72px;
         display: flex;
@@ -162,6 +164,7 @@
         justify-content: space-around;
         align-items: center;
         background-color: #08552E;
+        border-radius: 3%;
 
         .LeftName {
           font-size: 24px;
@@ -194,16 +197,20 @@
           font-size: 14px;
           align-self: flex-start;
           margin-left: 20px;
-
-          .LeftBadge {
-            border-radius: 50%;
-            width: 19.94px;
-            height: 19.94px;
-            background-color: #FCCE39;
-            color: #000000;
-            text-align: center;
-            font-weight: bold;
-            line-height: 19.94px;
+          .LeftBadges{
+            display: flex;
+            .LeftBadge {
+              border-radius: 50%;
+              width: 19.94px;
+              height: 19.94px;
+              background-color: #FCCE39;
+              color: #000000;
+              text-align: center;
+              font-weight: bold;
+              line-height: 19.94px;
+              margin-top: 5px;
+              margin-right: 5px;
+            }
           }
         }
 
@@ -216,13 +223,14 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        border: 1px red solid;
+        // border: 1px red solid;
         background-color: #05391F;
+        border-radius: 3%;
 
         .menuRankRightWrapper {
           width: 278.38px;
           height: 100.45px;
-          border: 1px blue solid;
+          border-bottom: 1px solid transparentize($color: #FCCE39, $amount: 0.7);
           color: #FCCE39;
           display: flex;
           justify-content: space-around;
@@ -251,14 +259,23 @@
 
             .rightBadgeContainer {
               font-size: 10px;
+              display: flex;
+              flex-direction: column;
+              .rightBadgeTitle {
 
-              .rightBadge {
-                background-color: #000000;
-                border-radius: 50%;
-                width: 12.77px;
-                height: 12.77px;
-                text-align: center;
-                font-weight: bold;
+              }
+              .rightBadges{
+                display: flex;
+                .rightBadge {
+                  background-color: #000000;
+                  border-radius: 50%;
+                  width: 12.77px;
+                  height: 12.77px;
+                  text-align: center;
+                  font-weight: bold;
+                  margin-top: 5px;
+                  margin-right: 3px;
+                }
               }
             }
           }
