라이어게임 1차 구현기능 디자인 적용

--- a/src/components/css/liarGame.css
+++ b/src/components/css/liarGame.css
@@ -9,5 +9,7 @@
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    border: 1px solid blue;
+}
+.tempBtn {
+    position: absolute;
 }
