--- a/src/components/css/WatingRoom.css
+++ b/src/components/css/WatingRoom.css
@@ -117,8 +117,9 @@
   height: 40px;
   text-align: center;
   font-size: 18px;
-  border-radius: 5%;
+  border-radius: 5px;
   background-color: #fcce39;
+    border: none;
   color: white;
 }
 
@@ -127,8 +128,9 @@
   height: 65.62px;
   text-align: center;
   font-size: 32px;
-  border-radius: 5%;
+  border-radius: 10px;
   background-color: #fcce39;
+    border: none;
   color: white;
 }
 
