--- a/src/components/css/selectGame.css
+++ b/src/components/css/selectGame.css
@@ -1,6 +1,17 @@
 .gameList {
     background-color: #323232;
+    list-style-type: none;
+    display: inline-block;
+    border: 1px solid black;
+    border-radius: 10px;
+    width: 350px;
+    box-sizing: border-box;
+    height: 220px;
+    padding: 10px;
+    cursor: pointer;
+    margin: 18px;
 }
+
 .gameList:hover {
     background-color: #FCCE39;
     color: #1B9659;
